Adds styles.css file and adds jquery in script.js file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Presidents of the United States</title>
-  <link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name=“viewport” content=“width=device-width, initial-scale=1”>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
