--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <title>Presidents of the United States</title>
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Charm:400,700|Raleway" rel="stylesheet">
 	<meta name=“viewport” content=“width=device-width, initial-scale=1”>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
+	<h1>Presidents of the United States</h1>
 	<table class="presidents">
 			<thead>
 				<tr>
